<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/main_height"
    android:background="@mipmap/background7"
    android:orientation="vertical"
    tools:context="com.zgty.oarobot.activity.StaffDetail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/back_admin"
            style="@style/AppBack" />

        <TextView
            style="@style/AppTextView3"
            android:text="@string/staff_manage"
            android:textColor="@color/yellowText"
            android:textSize="@dimen/main_type_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/photo_main_padding"
            android:layout_marginLeft="@dimen/photo_main_padding"
            android:layout_weight="4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTextView4"
                    android:text="@string/name_staff" />

                <EditText
                    android:id="@+id/name_staff"
                    style="@style/AppTextView5"
                    android:textColor="@color/greenText" />

                <TextView
                    style="@style/AppTextView4"
                    android:text="@string/name_staff_english" />

                <EditText
                    android:id="@+id/name_staff_english"
                    style="@style/AppTextView5"
                    android:digits="abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ" />

                <TextView
                    style="@style/AppTextView4"
                    android:text="@string/id_staff" />

                <EditText
                    android:id="@+id/id_staff"
                    style="@style/AppTextView5"
                    android:digits="0123456789"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTextView4"
                    android:text="@string/telephone_num" />

                <EditText
                    android:id="@+id/telephone_num"
                    style="@style/AppTextView5"
                    android:digits="0123456789"
                    android:inputType="number" />

                <TextView
                    style="@style/AppTextView4"
                    android:text="@string/name_part" />

                <EditText
                    android:id="@+id/name_part"
                    style="@style/AppTextView5" />

                <TextView
                    style="@style/AppTextView4"
                    android:text="@string/staff_position" />

                <EditText
                    android:id="@+id/staff_position"
                    style="@style/AppTextView5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTextView4"
                    android:text="@string/welcome_type" />

                <Spinner
                    android:id="@+id/welcome_type"
                    style="@style/AppTextView4" />

                <TextView
                    style="@style/AppTextView4"
                    android:text="@string/record_face_or_no" />

                <TextView
                    android:id="@+id/record_face_or_no"
                    style="@style/AppTextView4"
                    android:text="@string/face_not_record"
                    android:textColor="@color/redText" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_sure_cancel"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/edit_cancel"
                    style="@style/AppTextView4"
                    android:clickable="true"
                    android:drawableLeft="@mipmap/cancel"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/photo_main_padding"
                    android:text="@string/cancel_name"
                    android:textColor="@color/redText" />

                <TextView
                    android:id="@+id/edit_sure"
                    style="@style/AppTextView4"
                    android:clickable="true"
                    android:drawableLeft="@mipmap/sure"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/photo_main_padding"
                    android:text="@string/sure_name"
                    android:textColor="@color/greenText" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/delete_staff"
                style="@style/AppTextView2"
                android:background="@color/orangeBackground"
                android:text="@string/staff_delete" />

            <TextView
                android:id="@+id/edit_staff"
                style="@style/AppTextView2"
                android:background="@color/greenBackground"
                android:text="@string/staff_edit" />

            <TextView
                android:id="@+id/record_face"
                style="@style/AppTextView2"
                android:background="@color/purpleBackground"
                android:text="@string/staff_face_record" />

            <TextView style="@style/AppTextView2" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
