<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/main_height"
    android:background="@mipmap/background7"
    android:orientation="vertical"
    android:padding="@dimen/activity_main_padding"
    tools:context="com.zgty.oarobot.activity.TimeManageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/back_admin"
            style="@style/AppBack" />

        <TextView
            style="@style/AppTextView3"
            android:text="@string/time_manage"
            android:textColor="@color/yellowText"
            android:textSize="@dimen/main_type_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            style="@style/AppTextView4"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/time_on_time" />

        <TextView
            android:id="@+id/time_on_time"
            style="@style/AppTextView"
            android:textColor="@color/greenText" />

        <TextView
            style="@style/AppTextView4"
            android:text="@string/time_off_time" />

        <TextView
            android:id="@+id/time_off_time"
            style="@style/AppTextView"
            android:textColor="@color/greenText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            style="@style/AppTextView4"
            android:text="@string/time_late_min" />

        <EditText
            android:id="@+id/time_late_min"
            style="@style/AppTextView6"
            android:digits="0123456789"
            android:inputType="number" />

        <TextView
            style="@style/AppTextView4"
            android:text="@string/time_early_min" />

        <EditText
            android:id="@+id/time_early_min"
            style="@style/AppTextView6"
            android:digits="0123456789"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            style="@style/AppTextView4"
            android:text="@string/time_add_time" />

        <TextView
            android:id="@+id/time_add_time"
            style="@style/AppTextView"
            android:textColor="@color/greenText" />

        <TextView style="@style/AppTextView4" />

        <TextView style="@style/AppTextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_sure_cancel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/staff_item_height"
        android:layout_marginRight="@dimen/staff_item_height"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/edit_cancel"
            style="@style/AppTextView4"
            android:clickable="true"
            android:drawableLeft="@mipmap/cancel"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/photo_main_padding"
            android:text="@string/cancel_name"
            android:textColor="@color/redText" />

        <TextView
            android:id="@+id/edit_sure"
            style="@style/AppTextView4"
            android:clickable="true"
            android:drawableLeft="@mipmap/sure"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/photo_main_padding"
            android:text="@string/sure_name"
            android:textColor="@color/greenText" />
    </LinearLayout>
</LinearLayout>
